--- a/config/avia.yaml
+++ b/config/avia.yaml
@@ -11,7 +11,7 @@ preprocess:
     lidar_type: 1 # 4
     scan_line: 6 # 32
     timestamp_unit: 1           # the unit of time/t field in the PointCloud2 rostopic: 0-second, 1-milisecond, 2-microsecond, 3-nanosecond.
-    blind: 0.5 
+    blind: 1 
 
 mapping:
     imu_en: true
@@ -35,7 +35,8 @@ mapping:
     ivox_grid_resolution: 2.0
     gravity: [0.0, 0.0, -9.810] # [0.0, 9.810, 0.0] # # [0.0, 0.0, -9.787561] # gvins # 
     gravity_init: [0.0, 0.0, -9.810] # preknown gravity in the initial IMU frame for unstationary start or in the initial LiDAR frame for using without IMU
-    extrinsic_T: [ 0.04165, 0.02326, -0.0284 ] # avia # [0.011, 0.02329, -0.04412] # mid360
+    # extrinsic_T: [ 0.04165, 0.02326, -0.0284 ] # avia
+    extrinsic_T: [ -0.011, -0.02329, 0.04412 ] # mid360
     extrinsic_R: [ 1, 0, 0,
                    0, 1, 0,
                    0, 0, 1 ]
